issue solve  & changes  completed

--- a/assets/pug/components/table/invoice-table.pug
+++ b/assets/pug/components/table/invoice-table.pug
@@ -31,7 +31,7 @@ table.table(class="equal-space table-action invoice")
         td(class="min-w-[6.25rem]")
           h4(class="text-xs font-semibold text-title")=bodyData.total
         td(class="min-w-[3.125rem] text-right")
-          div.items-center.gap-3(class="block 2lg:hidden") 
+          div.items-center.gap-3(class="flex 2lg:hidden") 
             a(href="invoice-create.html")
               +SVG_ICON("Edit-Square","w-[1.125rem] h-[1.125rem] stroke-title hover:stroke-primary")
             button
