--- a/assets/pug/layout/unique.pug
+++ b/assets/pug/layout/unique.pug
@@ -9,7 +9,7 @@ aside(class="sidebar")
   div.search-wrapper
     div.search-box 
       input(class="search" placeholder="Search" type="search")
-      +SVG_ICON("Search", "w-5 h-5 hover:cursor-pointer")   
+      +SVG_ICON("Search", "w-5 h-5 cursor-pointer")   
   nav.sidebar-main 
     ul.sidebar-links.custom-scroll 
       each mainMenu in SIDEBAR_MENU
