--- a/assets/pug/pages/template/blog-grid.pug
+++ b/assets/pug/pages/template/blog-grid.pug
@@ -55,11 +55,11 @@ html(lang='en')
               div.flex.items-center.gap-3  
                 div.search-box.relative(class="2md:hidden")
                   input(class="rounded-5 w-full py-[11px] dark:bg-sidebar-dark2 dark:text-white pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title border border-border-light dark:border-border-dark" placeholder="Type to Search..." type="search")       
-                  +SVG_ICON("Search","hover:cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white")
+                  +SVG_ICON("Search","cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white")
                 button
-                  +SVG_ICON("Search","hover:cursor-pointer 2md:flex hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white")
+                  +SVG_ICON("Search","cursor-pointer 2md:flex hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white")
                 div.product-filter(class="hidden cursor-pointer lg:flex") 
-                  +SVG_ICON("Filter", " hover:cursor-pointer w-6 h-6 stroke-content3 lg:block hidden blog-toggle")
+                  +SVG_ICON("Filter", " cursor-pointer w-6 h-6 stroke-content3 lg:block hidden blog-toggle")
             div.col-span-3(class="2xl:col-span-4 blog-sidebar lg:w-[290px] sm:w-[280px]")
               div.card.sticky.top-0
                 div.card-header.border-b-0
@@ -67,7 +67,7 @@ html(lang='en')
                     i(data-feather="x" class="w-5 h-5 stroke-title")
                   div.search-box.relative
                     input(class="rounded-full bg-gray-light dark:bg-sidebar-dark2 dark:text-white w-full py-[.6875rem] pl-[1.5625rem] pr-[3.4375rem] text-xs font-semibold text-title" placeholder="Type to Search..." type="search")       
-                    +SVG_ICON("Search","hover:cursor-pointer w-6 h-6 stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[1.5625rem] absolute")
+                    +SVG_ICON("Search","cursor-pointer w-6 h-6 stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[1.5625rem] absolute")
                 div.card-body.flex.flex-col.gap-card-space                            
                   div(class="p-3 border first:rounded-tl-none border-light dark:border-border-dark rounded-5")
                     h4(class="mb-4 font-bold dark:text-white") Categories
@@ -167,7 +167,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Erin M. Baker
                                 span.text-content Feb 6,2023
-                            i(data-feather="more-vertical" class="h-5 stroke-content hover:cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
                           div
                             h5(class="mb-2 font-bold dark:text-white") Mobile App Development
                             p(class="text-content") Mobile Simple log in – logging in to your website is easy
@@ -192,7 +192,7 @@ html(lang='en')
                                 a(href="blog-grid.html") 
                                   p.text-title.font-bold(class="dark:text-white") Amy A. Servants
                                 span.text-content Feb 2,2023
-                            i(data-feather="more-vertical" class="h-5 stroke-content hover:cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
                           div
                             h5(class="mb-2 font-bold dark:text-white") Laptop and coffee
                             p(class="text-content") This image captures the quintessential work setup - a laptop and a coffee cup.
@@ -217,7 +217,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Jackie M. Martin
                                 span.text-content Jan 30,2023
-                            i(data-feather="more-vertical" class="h-5 stroke-content hover:cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
                           div
                             h5(class="mb-2 font-bold dark:text-white") Publish Policy 
                             p(class="text-content") The new rules(DSA)
@@ -242,7 +242,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Mary S. Jelks
                                 span.text-content Jan 25,2023  
-                            i(data-feather="more-vertical" class="h-5 stroke-content hover:cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
                           div 
                             h5(class="mb-2 font-bold dark:text-white") Revolutionizing Startups
                             p(class="text-content") The image showcases the critical successful startup, 
@@ -267,7 +267,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Katherine W. McWilliams  
                                 span.text-content Jan 5,2023
-                            i(data-feather="more-vertical" class="h-5 stroke-content hover:cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
                           div 
                             h5(class="mb-2 font-bold dark:text-white") Cozy Workspace
                             p(class="text-content")  AThe image is designed to convey a sense of comfort and warmth, 
@@ -292,7 +292,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Effie J. Frazier 
                                 span.text-content Jan 1,2023
-                            i(data-feather="more-vertical" class="h-5 stroke-content hover:cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
                           div 
                             h5(class="mb-2 font-bold dark:text-white") The Biggest Lie In The Code 
                             p(class="text-content")  I think programming plays a huge role in our lives,
@@ -317,7 +317,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Anna G. Proas  
                                 span.text-content Dec 31, 2022
-                            i(data-feather="more-vertical" class="h-5 stroke-content hover:cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
                           div 
                             h5(class="mb-2 font-bold dark:text-white") Old School Coded 
                             p(class="text-content")  In particular I learned about our mental and physical limits,
@@ -342,7 +342,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Ronald M. Spelean  
                                 span.text-content Dec 27, 2022 
-                            i(data-feather="more-vertical" class="h-5 stroke-content hover:cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
                           div 
                             h5(class="mb-2 font-bold dark:text-white") Content Management System 
                             p(class="text-content")  Your ecommerce website comes with a content management 
@@ -367,7 +367,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Shannon T. Clemons    
                                 span.text-content Dec 5, 2022
-                            i(data-feather="more-vertical" class="h-5 stroke-content hover:cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
                           div 
                             h5(class="mb-2 font-bold dark:text-white") Myths About Code
                             p(class="text-content")  No! All of the paragraphs in the  are written by humans,
