--- a/assets/pug/pages/template/blog-detail.pug
+++ b/assets/pug/pages/template/blog-detail.pug
@@ -52,11 +52,11 @@ html(lang='en')
               div.flex.items-center.gap-3 
                 div.search-box.relative(class="2md:hidden")
                   input(class="rounded-5 w-full py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] dark:bg-sidebar-dark2 dark:text-white text-xs font-semibold text-title border border-border-light dark:border-border-dark" placeholder="Type to Search..." type="search")       
-                  +SVG_ICON("Search","hover:cursor-pointer hover:cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white")
+                  +SVG_ICON("Search","cursor-pointer cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white")
                 button
-                  +SVG_ICON("Search","hover:cursor-pointer 2md:flex hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white")
+                  +SVG_ICON("Search","cursor-pointer 2md:flex hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white")
                 div.product-filter(class="hidden cursor-pointer lg:flex") 
-                  +SVG_ICON("Filter", " hover:cursor-pointer w-6 h-6 stroke-content3 blog-toggle lg:block hidden")
+                  +SVG_ICON("Filter", " cursor-pointer w-6 h-6 stroke-content3 blog-toggle lg:block hidden")
 
             div.col-span-3(class="4xl:col-span-4 blog-sidebar lg:w-[290px] sm:w-[280px]")
               div.card.sticky.top-0
@@ -65,7 +65,7 @@ html(lang='en')
                     i(data-feather="x" class="w-5 h-5 stroke-title")
                   div.search-box.relative
                     input(class="rounded-full bg-gray-light dark:bg-sidebar-dark2 dark:text-white w-full py-[.6875rem] pl-[1.5625rem] pr-[3.4375rem] text-xs font-semibold text-title" placeholder="Type to Search..." type="search")       
-                    +SVG_ICON("Search","hover:cursor-pointer w-6 h-6 stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[1.5625rem] absolute")
+                    +SVG_ICON("Search","cursor-pointer w-6 h-6 stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[1.5625rem] absolute")
                 div.card-body.flex.flex-col.gap-card-space                                  
                   div(class="p-3 border first:rounded-tl-none border-light dark:border-border-dark rounded-5")
                     h4(class="mb-4 font-bold dark:text-white") Categories
