--- a/assets/pug/pages/template/knowledgebase.pug
+++ b/assets/pug/pages/template/knowledgebase.pug
@@ -42,7 +42,7 @@ html(lang='en')
                   h3(class="mb-4 text-[33px] font-extrabold text-title lg:text-lg dark:text-black rtl:flex rtl:justify-end rtl:items-center ") How Can I help you ? 
                   div.search-box.relative 
                     input(class="border-border-light dark:border-border-dark dark:bg-sidebar-dark2 border rounded-5 w-full py-[11px] pl-[25px] pr-[55px] md:py-[5px] text-xs font-semibold text-title" placeholder="Type to Search..." type="search")       
-                    +SVG_ICON("Search", " xl:hidden hover:cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[25px] absolute ") 
+                    +SVG_ICON("Search", " xl:hidden cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[25px] absolute ") 
                   div.relative 
                     img(src="../../assets/images/svg/fiend.svg" alt="search-image" class="absolute bottom-[-63px] left-[94%] 6xl:w-[25%] lg:bottom-[-48px] 6xl:bottom-[-55px] xl:bottom-[-55px] w-[20%] xl:hidden")
           div.grid.grid-cols-12.gap-card-gap.mt-6 
