--- a/html/template/invoice.html
+++ b/html/template/invoice.html
@@ -43,7 +43,7 @@
                   <!-- Search Start  -->
                   <div class="search-box relative">
                     <input class="bg-gray-light dark:bg-sidebar-dark2 rounded-5 w-full  py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
-                    <svg class="xl:hidden hover:cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white"> 
+                    <svg class="xl:hidden cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white"> 
                       <use href="../../assets/svg/sprite.svg#Search"> </use>
                     </svg><i class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute" data-feather="x"></i>
                   </div>
@@ -74,7 +74,7 @@
                           </div>
                           <div class="search-box relative mt-4"> 
                             <input class="bg-gray-light border dark:bg-sidebar-dark2  dark:border-border-dark border-border-light  w-full py-[8px] pl-[15px] pr-[30px] rounded-5 text-xs font-medium text-title" placeholder="Type to Search..." type="search">
-                            <svg class="w-4 h-4 stroke-title top-1/2 -translate-y-1/2 right-[15px] absolute hover:cursor-pointer"> 
+                            <svg class="w-4 h-4 stroke-title top-1/2 -translate-y-1/2 right-[15px] absolute cursor-pointer"> 
                               <use href="../../assets/svg/sprite.svg#Search"> </use>
                             </svg>
                           </div>
@@ -768,7 +768,7 @@
             <div class="search-wrapper">
               <div class="search-box"> 
                 <input class="search" placeholder="Search" type="search">
-                <svg class="w-5 h-5 hover:cursor-pointer"> 
+                <svg class="w-5 h-5 cursor-pointer"> 
                   <use href="../../assets/svg/sprite.svg#Search"> </use>
                 </svg>
               </div>
@@ -1030,7 +1030,7 @@
                             <use href="../../assets/svg/sprite.svg#Arrow-Down-2"> </use>
                           </svg>
                         </button>
-                        <div class="dropdown-menu !w-36 !top-11 left-0 !p-2">
+                        <div class="dropdown-menu !w-36 !top-11 left-0 rtl:!right-0 rtl:!left-unset !p-2">
                           <ul class="flex flex-col cursor-pointer !gap-0">
                             <li class="px-2 py-1 rounded hover:bg-gray-light dark:hover:bg-sidebar-dark2">Select All</li>
                             <li class="px-2 py-1 rounded hover:bg-gray-light dark:hover:bg-sidebar-dark2">Edit</li>
@@ -1089,7 +1089,7 @@
                             <h4 class="text-xs font-semibold text-title">$2.588.00</h4>
                           </td>
                           <td class="min-w-[3.125rem] text-right">
-                            <div class="items-center gap-3 block 2lg:hidden"> <a href="invoice-create.html">
+                            <div class="items-center gap-3 flex 2lg:hidden"> <a href="invoice-create.html">
                                 <svg class="w-[1.125rem] h-[1.125rem] stroke-title hover:stroke-primary"> 
                                   <use href="../../assets/svg/sprite.svg#Edit-Square"> </use>
                                 </svg></a>
@@ -1153,7 +1153,7 @@
                             <h4 class="text-xs font-semibold text-title">$4.800.00</h4>
                           </td>
                           <td class="min-w-[3.125rem] text-right">
-                            <div class="items-center gap-3 block 2lg:hidden"> <a href="invoice-create.html">
+                            <div class="items-center gap-3 flex 2lg:hidden"> <a href="invoice-create.html">
                                 <svg class="w-[1.125rem] h-[1.125rem] stroke-title hover:stroke-primary"> 
                                   <use href="../../assets/svg/sprite.svg#Edit-Square"> </use>
                                 </svg></a>
@@ -1217,7 +1217,7 @@
                             <h4 class="text-xs font-semibold text-title">$4.678.00</h4>
                           </td>
                           <td class="min-w-[3.125rem] text-right">
-                            <div class="items-center gap-3 block 2lg:hidden"> <a href="invoice-create.html">
+                            <div class="items-center gap-3 flex 2lg:hidden"> <a href="invoice-create.html">
                                 <svg class="w-[1.125rem] h-[1.125rem] stroke-title hover:stroke-primary"> 
                                   <use href="../../assets/svg/sprite.svg#Edit-Square"> </use>
                                 </svg></a>
@@ -1281,7 +1281,7 @@
                             <h4 class="text-xs font-semibold text-title">$2.450.00</h4>
                           </td>
                           <td class="min-w-[3.125rem] text-right">
-                            <div class="items-center gap-3 block 2lg:hidden"> <a href="invoice-create.html">
+                            <div class="items-center gap-3 flex 2lg:hidden"> <a href="invoice-create.html">
                                 <svg class="w-[1.125rem] h-[1.125rem] stroke-title hover:stroke-primary"> 
                                   <use href="../../assets/svg/sprite.svg#Edit-Square"> </use>
                                 </svg></a>
@@ -1345,7 +1345,7 @@
                             <h4 class="text-xs font-semibold text-title">$2.450.00</h4>
                           </td>
                           <td class="min-w-[3.125rem] text-right">
-                            <div class="items-center gap-3 block 2lg:hidden"> <a href="invoice-create.html">
+                            <div class="items-center gap-3 flex 2lg:hidden"> <a href="invoice-create.html">
                                 <svg class="w-[1.125rem] h-[1.125rem] stroke-title hover:stroke-primary"> 
                                   <use href="../../assets/svg/sprite.svg#Edit-Square"> </use>
                                 </svg></a>
@@ -1409,7 +1409,7 @@
                             <h4 class="text-xs font-semibold text-title">$2.450.00</h4>
                           </td>
                           <td class="min-w-[3.125rem] text-right">
-                            <div class="items-center gap-3 block 2lg:hidden"> <a href="invoice-create.html">
+                            <div class="items-center gap-3 flex 2lg:hidden"> <a href="invoice-create.html">
                                 <svg class="w-[1.125rem] h-[1.125rem] stroke-title hover:stroke-primary"> 
                                   <use href="../../assets/svg/sprite.svg#Edit-Square"> </use>
                                 </svg></a>
@@ -1473,7 +1473,7 @@
                             <h4 class="text-xs font-semibold text-title">$2.450.00</h4>
                           </td>
                           <td class="min-w-[3.125rem] text-right">
-                            <div class="items-center gap-3 block 2lg:hidden"> <a href="invoice-create.html">
+                            <div class="items-center gap-3 flex 2lg:hidden"> <a href="invoice-create.html">
                                 <svg class="w-[1.125rem] h-[1.125rem] stroke-title hover:stroke-primary"> 
                                   <use href="../../assets/svg/sprite.svg#Edit-Square"> </use>
                                 </svg></a>
@@ -1537,7 +1537,7 @@
                             <h4 class="text-xs font-semibold text-title">$2.450.00</h4>
                           </td>
                           <td class="min-w-[3.125rem] text-right">
-                            <div class="items-center gap-3 block 2lg:hidden"> <a href="invoice-create.html">
+                            <div class="items-center gap-3 flex 2lg:hidden"> <a href="invoice-create.html">
                                 <svg class="w-[1.125rem] h-[1.125rem] stroke-title hover:stroke-primary"> 
                                   <use href="../../assets/svg/sprite.svg#Edit-Square"> </use>
                                 </svg></a>
