--- a/html/template/modal.html
+++ b/html/template/modal.html
@@ -45,7 +45,7 @@
                   <!-- Search Start  -->
                   <div class="search-box relative">
                     <input class="bg-gray-light dark:bg-sidebar-dark2 rounded-5 w-full  py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
-                    <svg class="xl:hidden hover:cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white"> 
+                    <svg class="xl:hidden cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white"> 
                       <use href="../../assets/svg/sprite.svg#Search"> </use>
                     </svg><i class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute" data-feather="x"></i>
                   </div>
@@ -76,7 +76,7 @@
                           </div>
                           <div class="search-box relative mt-4"> 
                             <input class="bg-gray-light border dark:bg-sidebar-dark2  dark:border-border-dark border-border-light  w-full py-[8px] pl-[15px] pr-[30px] rounded-5 text-xs font-medium text-title" placeholder="Type to Search..." type="search">
-                            <svg class="w-4 h-4 stroke-title top-1/2 -translate-y-1/2 right-[15px] absolute hover:cursor-pointer"> 
+                            <svg class="w-4 h-4 stroke-title top-1/2 -translate-y-1/2 right-[15px] absolute cursor-pointer"> 
                               <use href="../../assets/svg/sprite.svg#Search"> </use>
                             </svg>
                           </div>
@@ -770,7 +770,7 @@
             <div class="search-wrapper">
               <div class="search-box"> 
                 <input class="search" placeholder="Search" type="search">
-                <svg class="w-5 h-5 hover:cursor-pointer"> 
+                <svg class="w-5 h-5 cursor-pointer"> 
                   <use href="../../assets/svg/sprite.svg#Search"> </use>
                 </svg>
               </div>
@@ -1721,7 +1721,7 @@
           <div class="modal-body text-center">
             <p class="text-lg font-bold">Up to <span class="text-xl text-secondary">85% OFF</span> , Hurry Up Online Shopping</p>
             <div class="modal-img"><img class="w-40" src="../../assets/images/modal/online-shopping.gif" alt="shopping"></div>
-            <label class="hover:cursor-pointer bg-primary text-white py-1 px-2 rounded text-end inline-block" for="modal-1"><a href="shop.html">Explore More</a></label>
+            <label class="cursor-pointer bg-primary text-white py-1 px-2 rounded text-end inline-block" for="modal-1"><a href="shop.html">Explore More</a></label>
           </div>
         </div>
       </div>
@@ -1824,7 +1824,7 @@
             <div class="modal-img"> <img class="w-40" src="../../assets/images/modal/cookies-sendcookie.gif" alt="Cookies"></div>
           </div>
           <div class="modal-footer">
-            <label class="hover:cursor-pointer btn btn-primary p-2 text-white inline-block" for="modal-5">Accept</label>
+            <label class="cursor-pointer btn btn-primary p-2 text-white inline-block" for="modal-5">Accept</label>
           </div>
         </div>
       </div>
@@ -1836,7 +1836,7 @@
             <div class="modal-img"><img class="w-14" src="../../assets/images/modal/danger.gif" alt="danger"></div>
             <h3 class="text-lg font-bold mb-2">Ohh! Something went wrong!</h3>
             <p class="mb-3">Attackers on malicious activity may trick you into doing something dangerous like installing software or revealing your personal information.</p>
-            <label class="hover:cursor-pointer btn btn-danger py-1 px-2 text-white inline-block text-sm" for="modal-6">Close</label>
+            <label class="cursor-pointer btn btn-danger py-1 px-2 text-white inline-block text-sm" for="modal-6">Close</label>
           </div>
         </div>
       </div>
@@ -1881,7 +1881,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <label class="hover:cursor-pointer btn btn-primary text-white py-1 px-2 inline-block text-sm !text-end" for="modal-7">Close</label>
+            <label class="cursor-pointer btn btn-primary text-white py-1 px-2 inline-block text-sm !text-end" for="modal-7">Close</label>
           </div>
         </div>
       </div>
@@ -1946,7 +1946,7 @@
               <li><img class="w-52" src="../../assets/images/modal/facebook.gif" alt="facebook"></li>
             </ul>
             <p class="my-3">Remove your complete account from your phone or tablet to sign out of the Gmail app.</p>
-            <label class="hover:cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-10">Create an account</label>
+            <label class="cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-10">Create an account</label>
           </div>
         </div>
       </div>
@@ -1961,7 +1961,7 @@
               <li><img class="w-52" src="../../assets/images/modal/facebook.gif" alt="facebook"></li>
             </ul>
             <p class="my-3">Remove your complete account from your phone or tablet to sign out of the Gmail app.</p>
-            <label class="hover:cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-11">Create an account</label>
+            <label class="cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-11">Create an account</label>
           </div>
         </div>
       </div>
@@ -1976,7 +1976,7 @@
               <li> <img class="w-52" src="../../assets/images/modal/facebook.gif" alt="facebook"></li>
             </ul>
             <p class="my-3">Remove your complete account from your phone or tablet to sign out of the Gmail app.</p>
-            <label class="hover:cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-14"> Create an account</label>
+            <label class="cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-14"> Create an account</label>
           </div>
         </div>
       </div>
@@ -1988,7 +1988,7 @@
             <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
             <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
             <p class="mb-3">Now, you can access your account.</p>
-            <label class="hover:cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-12">Close</label>
+            <label class="cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-12">Close</label>
           </div>
         </div>
       </div>
@@ -2000,7 +2000,7 @@
             <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
             <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
             <p class="mb-3">Now, you can access your account.</p>
-            <label class="hover:cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-13">Close</label>
+            <label class="cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-13">Close</label>
           </div>
         </div>
       </div>
@@ -2012,7 +2012,7 @@
             <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
             <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
             <p class="mb-3">Now, you can access your account.</p>
-            <label class="hover:cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-15">Close</label>
+            <label class="cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-15">Close</label>
           </div>
         </div>
       </div>
