--- a/html/template/tabs.html
+++ b/html/template/tabs.html
@@ -47,7 +47,7 @@
                   <!-- Search Start  -->
                   <div class="search-box relative">
                     <input class="bg-gray-light dark:bg-sidebar-dark2 rounded-5 w-full  py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
-                    <svg class="xl:hidden hover:cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white"> 
+                    <svg class="xl:hidden cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white"> 
                       <use href="../../assets/svg/sprite.svg#Search"> </use>
                     </svg><i class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute" data-feather="x"></i>
                   </div>
@@ -78,7 +78,7 @@
                           </div>
                           <div class="search-box relative mt-4"> 
                             <input class="bg-gray-light border dark:bg-sidebar-dark2  dark:border-border-dark border-border-light  w-full py-[8px] pl-[15px] pr-[30px] rounded-5 text-xs font-medium text-title" placeholder="Type to Search..." type="search">
-                            <svg class="w-4 h-4 stroke-title top-1/2 -translate-y-1/2 right-[15px] absolute hover:cursor-pointer"> 
+                            <svg class="w-4 h-4 stroke-title top-1/2 -translate-y-1/2 right-[15px] absolute cursor-pointer"> 
                               <use href="../../assets/svg/sprite.svg#Search"> </use>
                             </svg>
                           </div>
@@ -772,7 +772,7 @@
             <div class="search-wrapper">
               <div class="search-box"> 
                 <input class="search" placeholder="Search" type="search">
-                <svg class="w-5 h-5 hover:cursor-pointer"> 
+                <svg class="w-5 h-5 cursor-pointer"> 
                   <use href="../../assets/svg/sprite.svg#Search"> </use>
                 </svg>
               </div>
